@@ -8,10 +8,10 @@
 
 /////////////// END OF PROTOCOL INTERNAL CODE    ///////////////////
 
-int init_proto_cotendo_struct() {
-    protocol_t * protocol_struct = init_protocol_struct_for_registration(PROTO_COTENDO, PROTO_COTENDO_ALIAS);
+int init_proto_francetvinfo_struct() {
+    protocol_t * protocol_struct = init_protocol_struct_for_registration(PROTO_FRANCETVINFO, PROTO_FRANCETVINFO_ALIAS);
     if (protocol_struct != NULL) { 
-        return register_protocol(protocol_struct, PROTO_COTENDO);
+        return register_protocol(protocol_struct, PROTO_FRANCETVINFO);
     } else {
         return 0;
     }
