@@ -30,6 +30,7 @@ Version 1.6.9.1
 	- Add classification for protocols by hostnames: PROTO_WECHAT, PROTO_BITGRAVITY, PROTO_CACHEFLY, PROTO_CDN77, PROTO_CDNETWORKS, PROTO_CHINACACHE
 	- Replace PROTO_TLS by PROTO_CDISCOUNT
 	- Replace PROTO_YAHOOGAMES by PROTO_ALLOCINE
+	- Replace PROTO_COTENDO by PROTO_FRANCETVINFO
 
 
 ## Version 1.6.9.0
